--- a/source/catalog.html
+++ b/source/catalog.html
@@ -82,7 +82,7 @@
                 <p class="catalog__title">Зайчик-попрыгайчик</p>
                 <p class="catalog__text">Рост 30 см, вес 200 г</p>
                 <div class="catalog__price">
-                  <p class="catalog__money">1200 руб.</p>
+                  <p class="catalog__money">1 200 руб.</p>
                   <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
                 </div>
               </div>
@@ -109,10 +109,10 @@
                 srcset="img/photo-toys-mobile@1x.jpg 767w, img/photo-toys-tablet@1x.jpg 1149w, img/photo-toys-desktop@1x.jpg"
                 alt="Большая корзина для игрушек">
               <div class="catalog__desc">
-                <p class="catalog__title catalog__title-basket">Большая корзина для игрушек</p>
+                <p class="catalog__title catalog__title-basket">Большая корзинка для игрушек</p>
                 <p class="catalog__text catalog__text-basket">Диаметр 30 см, высота 30 см</p>
                 <div class="catalog__price">
-                  <p class="catalog__money">1500 руб.</p>
+                  <p class="catalog__money">1 500 руб.</p>
                   <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
                 </div>
               </div>
