--- a/source/form.html
+++ b/source/form.html
@@ -78,45 +78,45 @@
         </p>
       </div>
       <form action="https://echo.htmlacademy.ru">
-        <div class="form__fieldset">
+        <div class="form__fieldset form__fieldset-type">
           <div class="form__inner">
             <p class="form__legend form__legend-line">Тип</p>
             <div class="form__radio">
               <div class="form__interior">
                 <input class="visually-hidden" id="interior" type="radio" name="type" value="interior" checked>
-                <label class="form__style-text form__text-indentation" for="interior">
+                <label class="form__style-text form__radio-indentation" for="interior">
                   Аксессуар для интерьера
                 </label>
               </div>
               <div class="form__games">
                 <input class="visually-hidden" id="games" type="radio" name="type" value="games">
-                <label class="form__style-text form__text-indentation" for="games">
+                <label class="form__style-text form__radio-indentation" for="games">
                   Детская игрушка
                 </label>
               </div>
             </div>
           </div>
         </div>
-        <div class="form__fieldset form__fieldset-background">
+        <div class="form__fieldset form__fieldset-checkboxes">
           <div class="form__inner">
             <p class="form__legend form__legend-line">Цвет</p>
             <div class="form__checkboxes">
               <input class="visually-hidden" id="white" name="color" value="white" type="checkbox" checked>
-              <label class="form__style-text form__text-indentation" for="white">Белый</label>
+              <label class="form__style-text form__checkbox-indentation" for="white">Белый</label>
               <input class="visually-hidden" id="gray" name="color" value="grey" type="checkbox" checked>
-              <label class="form__style-text form__text-indentation" for="gray">Серый</label>
+              <label class="form__style-text form__checkbox-indentation" for="gray">Серый</label>
               <input class="visually-hidden" id="tiffany" name="color" value="tiffany" type="checkbox">
-              <label class="form__style-text form__text-indentation" for="tiffany">«Тиффани»</label>
+              <label class="form__style-text form__checkbox-indentation" for="tiffany">«Тиффани»</label>
               <input class="visually-hidden" id="black" name="color" value="black" type="checkbox">
-              <label class="form__style-text form__text-indentation" for="black">Черный</label>
+              <label class="form__style-text form__checkbox-indentation" for="black">Черный</label>
               <input class="visually-hidden" id="pink" name="color" value="pink" type="checkbox">
-              <label class="form__style-text form__text-indentation" for="pink">Розовый</label>
+              <label class="form__style-text form__checkbox-indentation" for="pink">Розовый</label>
               <input class="visually-hidden" id="orange" name="color" value="orange" type="checkbox">
-              <label class="form__style-text form__text-indentation" for="orange">Оранжевый</label>
+              <label class="form__style-text form__checkbox-indentation" for="orange">Оранжевый</label>
             </div>
           </div>
         </div>
-        <div class="form__fieldset">
+        <div class="form__fieldset form__fieldset-names">
           <div class="form__inner">
             <p class="form__legend form__legend-names form__legend-line">Фио</p>
             <div class="form__names">
@@ -127,17 +127,17 @@
               </div>
               <div class="form__last-name">
                 <label class="form__style-text form__text-mb" for="last-name">Фамилия:</label>
-                <input class="form__placeholder" id="last-name" type="text"
+                <input class="form__placeholder form__placeholder-last-name" id="last-name" type="text"
                   placeholder="Укажите фамилию*">
               </div>
               <div class="form__father-name">
                 <label class="form__style-text form__text-mb" for="father-name">Отчество:</label>
-                <input class="form__placeholder" id="father-name" type="text" placeholder="Отчество, если желаете">
+                <input class="form__placeholder form__placeholder-father-name" id="father-name" type="text" placeholder="Отчество, если желаете">
               </div>
             </div>
           </div>
         </div>
-        <div class="form__fieldset form__fieldset-background">
+        <div class="form__fieldset form__fieldset-email">
           <div class="form__inner form__inner-column">
             <div class="form__wrapper-phone">
               <p class="form__legend form__legend-phone form__legend-line">Тел</p>
@@ -146,14 +146,14 @@
                 pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required>
             </div>
             <div class="form__wrapper-email">
-              <p class="form__legend form__legend-email form__legend-line">Email</p>
+              <p class="form__legend form__legend-email form__legend-line">E-mail</p>
               <label for="email"></label>
               <input class="form__placeholder form__placeholder-email" id="email" type="email" placeholder="Ваш Email*"
                 required>
             </div>
           </div>
         </div>
-        <div class="form__fieldset">
+        <div class="form__fieldset form__fieldset-additionally">
           <div class="form__inner">
             <p class="form__legend form__legend-additionally form__legend-line">Доп</p>
             <label class="form__textarea">
