creates desktop PixelPerfect and fix bugs

--- a/source/form.html
+++ b/source/form.html
@@ -146,7 +146,7 @@
                 pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required>
             </div>
             <div class="form__wrapper-email">
-              <p class="form__legend form__legend-email form__legend-line">E-mail</p>
+              <p class="form__legend form__legend-email form__legend-line">Email</p>
               <label for="email"></label>
               <input class="form__placeholder form__placeholder-email" id="email" type="email" placeholder="Ваш Email*"
                 required>
