--- a/source/index.html
+++ b/source/index.html
@@ -68,7 +68,7 @@
     <!-- Секция ручной работы -->
     <section class="handwork">
       <div class="handwork__title">
-        <p class="handwork__text">Милые штуки ручной работы для дома</p>
+        <p class="handwork__text">Милые штуки ручной <br class="handwork__title-br"> работы для дома</p>
       </div>
       <div class="handwork__goods">
         <a href="catalog.html" class="handwork__interior">
@@ -99,7 +99,7 @@
           <div class="baskets__info">
             <div class="baskets__description">
               <p class="baskets__about-text">
-                Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.
+                Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
               </p>
               <table class="baskets__table">
                 <tr class="baskets__desc-table">
@@ -190,7 +190,7 @@
             <p class="reviews__text">
               Я молодая мама, но всё равно фотографии не набирали и близко
               такого количества лайков, как у популярных инстамамочек.
-              В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+              В отчаянии, я накупила аксессуаров и игрушек в Мишке, <br class="reviews__text-br">
               и мои фотографии сразу стали более стильными, а также набирают больше лайков!
             </p>
             <div class="reviews__user">
