--- a/source/form.html
+++ b/source/form.html
@@ -122,8 +122,7 @@
             <div class="form__names">
               <div class="form__first-name">
                 <label class="form__style-text form__text-mb" for="first-name">Имя:</label>
-                <input class="form__placeholder" id="first-name" type="text"
-                  placeholder="Введите ваше имя*">
+                <input class="form__placeholder" id="first-name" type="text" placeholder="Введите ваше имя*">
               </div>
               <div class="form__last-name">
                 <label class="form__style-text form__text-mb" for="last-name">Фамилия:</label>
@@ -132,7 +131,8 @@
               </div>
               <div class="form__father-name">
                 <label class="form__style-text form__text-mb" for="father-name">Отчество:</label>
-                <input class="form__placeholder form__placeholder-father-name" id="father-name" type="text" placeholder="Отчество, если желаете">
+                <input class="form__placeholder form__placeholder-father-name" id="father-name" type="text"
+                  placeholder="Отчество, если желаете">
               </div>
             </div>
           </div>
