fixes mail link and add hover-down style

--- a/source/index.html
+++ b/source/index.html
@@ -215,7 +215,7 @@
           <div class="contacts__info">
             <div class="contacts__email">
               <p class="contacts__value">e-mail:</p>
-              <p class="contacts__field contacts__field-line">info@mimimishkashop.ru</p>
+              <a href="mailto:info@mimimishkashop.ru" class="contacts__field contacts__field-line">info@mimimishkashop.ru</a>
             </div>
             <div class="contacts__address">
               <p class="contacts__value">адрес:</p>
