fix PP, and add hover-down in catalog

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -78,12 +78,14 @@
               <img class="catalog__image" src="img/photo-hare-mobile@1x.jpg"
                 srcset="img/photo-hare-mobile@1x.jpg 767w, img/photo-hare-tablet@1x.jpg 1149w, img/photo-hare-desktop@1x.jpg"
                 alt="Зайчик-попрыгайчик">
-              <div class="catalog__desc">
-                <p class="catalog__title">Зайчик-попрыгайчик</p>
-                <p class="catalog__text">Рост 30 см, вес 200 г</p>
-                <div class="catalog__price">
-                  <p class="catalog__money">1 200 руб.</p>
-                  <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
+              <div class="catalog__shadow">
+                <div class="catalog__desc">
+                  <p class="catalog__title">Зайчик-попрыгайчик</p>
+                  <p class="catalog__text">Рост 30 см, вес 200 г</p>
+                  <div class="catalog__price">
+                    <p class="catalog__money">1 200 руб.</p>
+                    <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
+                  </div>
                 </div>
               </div>
             </a>
@@ -93,12 +95,14 @@
               <img class="catalog__image" src="img/photo-bowl-mobile@1x.jpg"
                 srcset="img/photo-bowl-mobile@1x.jpg 767w, img/photo-bowl-tablet@1x.jpg 1149w, img/photo-bowl-desktop@1x.jpg"
                 alt="Корзинка для белья">
-              <div class="catalog__desc">
-                <p class="catalog__title">Корзинка для белья</p>
-                <p class="catalog__text">Диаметр 15 см, высота 10 см</p>
-                <div class="catalog__price">
-                  <p class="catalog__money">690 руб.</p>
-                  <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
+              <div class="catalog__shadow">
+                <div class="catalog__desc">
+                  <p class="catalog__title">Корзинка для белья</p>
+                  <p class="catalog__text">Диаметр 15 см, высота 10 см</p>
+                  <div class="catalog__price">
+                    <p class="catalog__money">690 руб.</p>
+                    <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
+                  </div>
                 </div>
               </div>
             </a>
@@ -108,12 +112,14 @@
               <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg"
                 srcset="img/photo-toys-mobile@1x.jpg 767w, img/photo-toys-tablet@1x.jpg 1149w, img/photo-toys-desktop@1x.jpg"
                 alt="Большая корзина для игрушек">
-              <div class="catalog__desc">
-                <p class="catalog__title catalog__title-basket">Большая корзинка для игрушек</p>
-                <p class="catalog__text catalog__text-basket">Диаметр 30 см, высота 30 см</p>
-                <div class="catalog__price">
-                  <p class="catalog__money">1 500 руб.</p>
-                  <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
+              <div class="catalog__shadow">
+                <div class="catalog__desc">
+                  <p class="catalog__title catalog__title-basket">Большая корзинка для игрушек</p>
+                  <p class="catalog__text catalog__text-basket">Диаметр 30 см, высота 30 см</p>
+                  <div class="catalog__price">
+                    <p class="catalog__money">1 500 руб.</p>
+                    <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
+                  </div>
                 </div>
               </div>
             </a>
