--- a/14/form.html
+++ b/14/form.html
@@ -123,8 +123,7 @@
             <div class="form__names">
               <div class="form__first-name">
                 <label class="form__style-text form__text-mb" for="first-name">Имя:</label>
-                <input class="form__placeholder" id="first-name" type="text"
-                  placeholder="Введите ваше имя*">
+                <input class="form__placeholder" id="first-name" type="text" placeholder="Введите ваше имя*">
               </div>
               <div class="form__last-name">
                 <label class="form__style-text form__text-mb" for="last-name">Фамилия:</label>
@@ -133,7 +132,8 @@
               </div>
               <div class="form__father-name">
                 <label class="form__style-text form__text-mb" for="father-name">Отчество:</label>
-                <input class="form__placeholder form__placeholder-father-name" id="father-name" type="text" placeholder="Отчество, если желаете">
+                <input class="form__placeholder form__placeholder-father-name" id="father-name" type="text"
+                  placeholder="Отчество, если желаете">
               </div>
             </div>
           </div>
@@ -144,7 +144,7 @@
               <p class="form__legend form__legend-phone form__legend-line">Тел</p>
               <label for="number-phone"></label>
               <input class="form__placeholder form__placeholder-tel" id="number-phone" type="tel"
-                pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required>
+                pattern="+2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required>
             </div>
             <div class="form__wrapper-email">
               <p class="form__legend form__legend-email form__legend-line">Email</p>
