--- a/source/form.html
+++ b/source/form.html
@@ -143,7 +143,7 @@
               <p class="form__legend form__legend-phone form__legend-line">Тел</p>
               <label for="number-phone"></label>
               <input class="form__placeholder form__placeholder-tel" id="number-phone" type="tel"
-                pattern="+2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required>
+                pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required>
             </div>
             <div class="form__wrapper-email">
               <p class="form__legend form__legend-email form__legend-line">Email</p>
