--- a/source/index.html
+++ b/source/index.html
@@ -221,7 +221,8 @@
               <p class="contacts__value">адрес:</p>
               <div class="contacts__field">
                 <p class="contacts__city">г. Санкт-Петербург,</p>
-                <p class="contacts__street">ул. Большая Конюшенная, д. 19/8, офис 101</p>
+                <p class="contacts__street">ул. Большая Конюшенная,</p>
+                <p class="contacts__street">д. 19/8, офис 101</p>
               </div>
             </div>
           </div>
