--- a/source/index.html
+++ b/source/index.html
@@ -226,6 +226,7 @@
               </div>
             </div>
           </div>
+          <div id="map" class="contacts__map-js contacts__map-js--dn"></div>
           <div class="contacts__map">
             <img class="contacts__image" src="img/map-mobile@1x.jpg"
               srcset="img/map-mobile@1x.jpg 767w, img/map-tablet@1x.jpg 1149w, img/map-desktop@1x.jpg"
@@ -297,6 +298,8 @@
   </section>
 
   <script src="js/menu.js"></script>
+  <script src="js/map.js"></script>
+  <script src=https://api-maps.yandex.ru/2.1/?lang=ru_RU></script>    
 
 </body>
 
