--- a/source/form.html
+++ b/source/form.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="body no-js">
 
   <!-- Шапка сайта -->
   <header class="header">
