--- a/source/catalog.html
+++ b/source/catalog.html
@@ -84,7 +84,7 @@
                   <p class="catalog__text">Рост 30 см, вес 200 г</p>
                   <div class="catalog__price">
                     <p class="catalog__money">1 200 руб.</p>
-                    <img id="modal-add" src="https://via.placeholder.com/150x150" width="20" height="19"
+                    <img id="modal-add" src="http://placecorgi.com/150" width="20" height="19"
                       alt="Иконка корзины">
                   </div>
                 </div>
@@ -102,7 +102,7 @@
                   <p class="catalog__text">Диаметр 15 см, высота 10 см</p>
                   <div class="catalog__price">
                     <p class="catalog__money">690 руб.</p>
-                    <img id="modal-add" src="https://via.placeholder.com/150x150" width="20" height="19"
+                    <img id="modal-add" src="http://placecorgi.com/150" width="20" height="19"
                       alt="Иконка корзины">
                   </div>
                 </div>
@@ -120,7 +120,7 @@
                   <p class="catalog__text catalog__text-basket">Диаметр 30 см, высота 30 см</p>
                   <div class="catalog__price">
                     <p class="catalog__money">1 500 руб.</p>
-                    <img id="modal-add" src="https://via.placeholder.com/150x150" width="20" height="19"
+                    <img id="modal-add" src="http://placecorgi.com/150" width="20" height="19"
                       alt="Иконка корзины">
                   </div>
                 </div>
@@ -129,7 +129,7 @@
           </li>
           <li class="catalog__item catalog__item-video">
             <div class="catalog__process">
-              <img class="catalog__img" src="https://via.placeholder.com/150x150" width="32" height="22"
+              <img class="catalog__img" src="http://placecorgi.com/150" width="32" height="22"
                 alt="процес производства">
               <p class="catalog__title catalog__title-process">Процесс производства</p>
             </div>
@@ -160,15 +160,15 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link-instagram" href="#" aria-label="Инстаграм">
-              <img src="https://via.placeholder.com/150x150" alt="Наш инстаграм" width="22" height="21"></a>
+              <img src="http://placecorgi.com/150" alt="Наш инстаграм" width="22" height="21"></a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-facebook" href="#" aria-label="Фейсбук">
-              <img src="https://via.placeholder.com/150x150" alt="Наш фейсбук" width="15" height="28"></a>
+              <img src="http://placecorgi.com/150" alt="Наш фейсбук" width="15" height="28"></a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-twitter" href="#" aria-label="Твитер">
-              <img src="https://via.placeholder.com/150x150" alt="Наш твиттер" width="23" height="20"></a>
+              <img src="http://placecorgi.com/150" alt="Наш твиттер" width="23" height="20"></a>
           </li>
         </ul>
       </div>
@@ -176,7 +176,7 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34"
+          <img class="footer__image" src="http://placecorgi.com/150" width="27" height="34"
             alt="HTML Academy">
         </a>
       </div>
