--- a/source/form.html
+++ b/source/form.html
@@ -181,15 +181,15 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link-instagram" href="#" aria-label="Инстаграм">
-              <img src="https://via.placeholder.com/150x150" alt="Наш инстаграм" width="22" height="21"></a>
+              <img src="http://placecorgi.com/150" alt="Наш инстаграм" width="22" height="21"></a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-facebook" href="#" aria-label="Фейсбук">
-              <img src="https://via.placeholder.com/150x150" alt="Наш фейсбук" width="15" height="28"></a>
+              <img src="http://placecorgi.com/150" alt="Наш фейсбук" width="15" height="28"></a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-twitter" href="#" aria-label="Твитер">
-              <img src="https://via.placeholder.com/150x150" alt="Наш твиттер" width="23" height="20"></a>
+              <img src="http://placecorgi.com/150" alt="Наш твиттер" width="23" height="20"></a>
           </li>
         </ul>
       </div>
@@ -197,7 +197,7 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34"
+          <img class="footer__image" src="http://placecorgi.com/150" width="27" height="34"
             alt="HTML Academy">
         </a>
       </div>
