--- a/source/index.html
+++ b/source/index.html
@@ -74,14 +74,14 @@
         <a href="catalog.html" class="handwork__interior">
           <div class="handwork__inner handwork__flex-g">
             <p class="handwork__category">Предметы интерьера</p>
-            <img class="handwork__image-itn handwork__image-active" src="https://via.placeholder.com/150x150" width="40"
+            <img class="handwork__image-itn handwork__image-active" src="http://placecorgi.com/150" width="40"
               height="62" alt="Предметы интерьера">
           </div>
         </a>
         <a href="catalog.html" class="handwork__toys">
           <div class="handwork__inner handwork__flex-g">
             <p class="handwork__category">Детские игрушки</p>
-            <img class="handwork__image-toys handwork__image-active" src="https://via.placeholder.com/150x150"
+            <img class="handwork__image-toys handwork__image-active" src="http://placecorgi.com/150"
               width="60" height="60" alt="Детские игрушки">
           </div>
         </a>
@@ -147,32 +147,32 @@
           <h2 class="about-us__title title">Коротко о нас:</h2>
           <ul class="about-us__list">
             <li class="about-us__item about-us__item-eco">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="32" height="37"
+              <img class="about-us__image" src="http://placecorgi.com/150" width="32" height="37"
                 alt="Экологически чистые материалы">
               <p class="about-us__text">Экологически чистые материалы</p>
             </li>
             <li class="about-us__item about-us__item-scandinavian">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="47" height="27"
+              <img class="about-us__image" src="http://placecorgi.com/150" width="47" height="27"
                 alt="Скандинавский стиль по российской цене">
               <p class="about-us__text">Скандинавский стиль по российской цене</p>
             </li>
             <li class="about-us__item about-us__item-likes">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="34" height="27"
+              <img class="about-us__image" src="http://placecorgi.com/150" width="34" height="27"
                 alt="Увеличивает лайкина фотографиях">
               <p class="about-us__text">Увеличивает лайки на фотографиях</p>
             </li>
             <li class="about-us__item about-us__item-love">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="35" height="34"
+              <img class="about-us__image" src="http://placecorgi.com/150" width="35" height="34"
                 alt="Связано вручную с любовью и умилением">
               <p class="about-us__text">Связано вручную с любовью и умилением</p>
             </li>
             <li class="about-us__item about-us__item-support">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="55" height="23"
+              <img class="about-us__image" src="http://placecorgi.com/150" width="55" height="23"
                 alt="Поддержка отечественного производителя">
               <p class="about-us__text">Поддержка отечественного производителя</p>
             </li>
             <li class="about-us__item about-us__item-present">
-              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="33" height="32"
+              <img class="about-us__image" src="http://placecorgi.com/150" width="33" height="32"
                 alt="Поставляется в подарочной упаковке">
               <p class="about-us__text">Поставляется в подарочной упаковке</p>
             </li>
@@ -234,7 +234,7 @@
             <img class="contacts__image" src="img/map-mobile@1x.jpg"
               srcset="img/map-mobile@1x.jpg 767w, img/map-tablet@1x.jpg 1149w, img/map-desktop@1x.jpg"
               alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
-            <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="Контакты" width="100" height="67">
+            <img class="contacts__pin" src="http://placecorgi.com/150" alt="Контакты" width="100" height="67">
           </div>
           <form action="mailto:info@mimimishkashop.ru">
             <button class="contacts__btn button" type="submit">Напишите нам</button>
@@ -255,17 +255,17 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link-instagram" href="#" aria-label="Инстаграм">
-              <img src="https://via.placeholder.com/150x150" alt="Наш инстаграм" width="22" height="21">
+              <img src="http://placecorgi.com/150" alt="Наш инстаграм" width="22" height="21">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-facebook" href="#" aria-label="Фейсбук">
-              <img src="https://via.placeholder.com/150x150" alt="Наш фейсбук" width="15" height="28">
+              <img src="http://placecorgi.com/150" alt="Наш фейсбук" width="15" height="28">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link-twitter" href="#" aria-label="Твитер">
-              <img src="https://via.placeholder.com/150x150" alt="Наш твиттер" width="23" height="20">
+              <img src="http://placecorgi.com/150" alt="Наш твиттер" width="23" height="20">
             </a>
           </li>
         </ul>
@@ -274,7 +274,7 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34"
+          <img class="footer__image" src="http://placecorgi.com/150" width="27" height="34"
             alt="HTML Academy">
         </a>
       </div>
